--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "classnames": "^2.5.1",
     "framer-motion": "^10.16.16",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "sharp": "^0.33.1"
   },
   "devDependencies": {
